updates info section

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -247,27 +247,32 @@ body {
 /* The Modal (background) */
 
 .modal {
-  display: none;
+  display: block;
   position: fixed;
-  z-index: 1;
-  padding-top: 100px;
+  z-index: 10;
+  padding: 20px 0;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.modal.hidden {
+  display: none;
+}
+
 
 /* Modal Content */
 
 .modal-content {
   background-color: #fefefe;
   margin: auto;
-  padding: 20px;
+  padding: 0 20px;
   border: 1px solid #888;
   width: 80%;
+  height: 100%;
+  overflow: scroll;
 }
 
 /* The Close Button */
@@ -284,6 +289,10 @@ body {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.info-wrapper {
+  z-index: auto;
 }
 
 /* Banner */
