--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -122,6 +122,10 @@
   text-align: center;
 }
 
+.chart-wrapper-inner p {
+  margin: 0;
+}
+
 .code-view .card,
 .code-view {
   overflow: hidden;
@@ -331,3 +335,63 @@ body {
 .btn.btn-red { background: #e65050;  transition: all 300ms; color: white; margin: 0 2px; }
 .btn.btn-red:hover{ background: #ec7171; }
 .btn.btn-red:active{ background:#e65050 }
+
+.change-type {
+  display: inline-block;
+  margin: 0 10px;
+}
+.change-type > div {
+  display: inline-flex;
+  position: relative;
+  margin: 0 10px;
+}
+.change-type label {
+  position: relative;
+  padding: 5px 10px 5px 30px;
+  border-radius: 4px;
+}
+.change-type input {
+  opacity: 0;
+  cursor: pointer;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  position: absolute;
+}
+.change-type label:before,
+.change-type label:after {
+  content: "";
+  position: absolute;
+}
+.change-type label:before {
+  display: block;
+  background: #fff;
+  border: 2px solid #949697;
+  box-shadow: none;
+  border-radius: 50%;
+  top: 11px;
+  left: 8px;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.change-type label:after {
+  width: 0.9rem;
+  height: 0.9rem;
+  top: 14px;
+  left: 11px;
+  border-radius: 50%;
+}
+.change-type input:checked ~ label {
+  color: #48b884;
+  font-weight: 600;
+  box-shadow: 0 4px 9px 0 rgba(104,105,128,.22);
+}
+.change-type input:checked ~ label:before {
+  color: #fff;
+  box-shadow: none;
+  border: 2px solid #48b884;
+}
+.change-type input:checked ~ label:after {
+  background: #55bd8d;
+}
