--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -327,7 +327,10 @@ body {
 }
 
 /* Demo */
-.btn { font-family: 'Source Sans Pro'; }
+.btn {
+  font-family: 'Source Sans Pro';
+  margin: 0 5px;
+}
 .btn.btn-custom { background: #4a4d8c;  transition: all 300ms; color: white; margin: 0 2px; }
 .btn.btn-custom:hover{ background: #5c62b5; }
 .btn.btn-custom:active{ background:#4a4d8c }
