updated slice data plot sample

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -126,6 +126,11 @@
   margin: 0;
 }
 
+/* Exclude */
+.chart-responsive-charts .chart-wrapper-inner {
+  text-align: left;
+}
+
 .code-view .card,
 .code-view {
   overflow: hidden;
